finish hw2